@@ -197,8 +197,8 @@ for ID3v2.2 and ID3v2.3 and
 for ID3v2.4.
 .RE
 .TP
-.B \-\-no\-unsync
-Do not unsynchronise v2 tags when writing. By default, v2 tags are being
+\fB\-u\fR, \fB\-\-unsync
+Unsynchronise ID3v2 tags when writing. By default, ID3v2 tags are not
 unsynchronised.
 .TP
 \fB\-s\fR, \fB\-\-size \fISIZE
