@@ -27,7 +27,7 @@ void help(void)
 "       -F, --frame FRAME_ID['['{INDEX|*}']'][[:{ENC|bin}]:{-|DATA}]\n"
 "\n"
 "General options:\n"
-"       --no-unsync                   do not unsynchronise ID3v2 tags\n"
+"       -u, --unsync                  unsynchronise ID3v2 tags\n"
 "       -v, --verbose                 be verbose\n"
 "       -V, --version                 print the version number\n"
 "       -h, --help                    print this message"
